<resources>

    <string name="action_settings">Action</string>
    <string name="nav_header_desc">Creative App</string>
    <string name="nav_header_subtitle">Creative App</string>
    <string name="nav_header_title">Creative App</string>
    <string name="app_name">Creative App</string>
    <string name="menu_project">Projects</string>
    <string name="menu_slideshow">Menu side</string>
    <string name="menu_contact">Contact</string>
    <string name="menu_home">Home</string>
    <string name="menu_login">Login</string>
    <string name="menu_profile_write">Profile Write</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="mobile">"Mobile"</string>
    <string name="sign_in">Sign In"</string>
    <string name="register">Register"</string>
    <string name="or_">OR</string>
    <string name="creative">Creative</string>
    <string name="public_">Public</string>
    <string name="reporter">Reporter</string>
    <string name="department">Department</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_home_navigation">HomeNavigationActivity</string>
    <string name="title_activity_home_menu">HomeMenuActivity</string>
    <string-array name="navigation_drawer_items_array">
        <item>Connect</item>
        <item>Fixtures</item>
        <item>Table</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_photos">Photos</string>
    <string name="nav_movies">Movies</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Photos</item>
        <item>Movies</item>
        <item>Notifications</item>
        <item>Settings</item>
    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="add_contact">New Add Information</string>
    <string name="title">Title</string>
    <string name="file">File</string>
    <string name="detail">Detail</string>
</resources>