<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_login" />
        <item
            android:id="@+id/nav_profile_write"
            android:icon="@drawable/edit_icon"
            android:title="@string/menu_profile_write" />
       <!-- <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />-->
        <item
            android:id="@+id/nav_project"
            android:icon="@drawable/yojana_icon"
            android:title="@string/menu_project" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/user_icon"
            android:title="@string/menu_contact" />
    </group>
</menu>