<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/app_theme_color">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="@dimen/margin_10"
            android:textSize="@dimen/text_size_30"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginTop="96dp"
            android:text="@string/creative">
        </TextView>
        <LinearLayout
            android:layout_marginTop="@dimen/margin_20"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingStart="40dp"
            android:paddingTop="40dp"
            android:background="@drawable/top_rounded_corner_bg"
            android:paddingEnd="40dp">



            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mobile"


                android:inputType="phone"
                android:padding="@dimen/margin_15"
                android:textColor="@color/app_theme_color"
                android:textColorHint="@color/app_theme_color"
                android:background="@drawable/rounded_corner_bg"/>

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_20"
                android:hint="@string/prompt_password"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:textColorHint="@color/app_theme_color"
                android:selectAllOnFocus="true"
                android:textColor="@color/app_theme_color"
                android:padding="@dimen/margin_15"
                android:background="@drawable/rounded_corner_bg"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="30dp"
                android:enabled="false"
                android:textColor="@color/white"
                android:background="@drawable/rounded_solid_bg"
                android:text="@string/sign_in" />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10"
                android:layout_marginBottom="@dimen/margin_10">
                <View
                    android:layout_toLeftOf="@+id/id_or_"
                    android:layout_alignParentStart="true"
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:background="@color/line_color"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true">

                </View>

                <TextView
                    android:id="@+id/id_or_"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:padding="@dimen/margin_10"
                    android:textColor="@color/app_theme_color"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_size_20"
                    android:text="@string/or_">
                </TextView>
                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:layout_toRightOf="@+id/id_or_"
                    android:background="@color/line_color"
                    android:layout_centerVertical="true">

                </View>
            </RelativeLayout>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="64dp"
                android:enabled="false"
                android:textColor="@color/white"
                android:background="@drawable/rounded_solid_bg"
                android:text="@string/register" />
        </LinearLayout>

    </LinearLayout>


    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone" />

</LinearLayout>